src/objects/Vendor_Location__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alarms__c</fullName>
        <description>#STDFLD</description>
        <label>Alarms</label>
        <picklist>
            <picklistValues>
                <fullName>Monitored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audible</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Area_Occupied__c</fullName>
        <description>#STDFLD</description>
        <label>Area Occupied</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Height__c</fullName>
        <description>#STDFLD</description>
        <inlineHelpText>Building height in Feet.  Can be other measurement if necessary.  Meters, etc.</inlineHelpText>
        <label>Building Height</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSA_Assessment_Result__c</fullName>
        <description>Records the score generated from a control self assessment (CSA) of this vendor location</description>
        <inlineHelpText>This value to be auto updated from CSA tool</inlineHelpText>
        <label>CSA Assessment Result</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coastal_Distance__c</fullName>
        <description>#STDFLD</description>
        <label>Coastal Distance</label>
        <picklist>
            <picklistValues>
                <fullName>Less Than 1 Mile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 5 Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 15 Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 to 20 Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Than 20 Miles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction_Risk__c</fullName>
        <label>Construction Risk</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction_Type__c</fullName>
        <description>#STDFLD</description>
        <label>Construction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wood Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Tilt-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precast Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinforced Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stucco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Reinforced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction_Year__c</fullName>
        <description>#STDFLD</description>
        <label>Construction Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_CSA__c</fullName>
        <description>Date that last CSA was submitted</description>
        <label>Date of Last CSA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Replace_this_Source__c</fullName>
        <description>Number of days from interruption to production at this location until acceptable alternative is found and inserted into supply chain</description>
        <inlineHelpText>Enter the number of days required to replace the product/process from this location - include negotiations/setup/ production and delivery to replace this location&apos;s role in the supply chain. Equivalent of Time to Recovery TTR</inlineHelpText>
        <label>Days to Replace this Source</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earthquake_Zone__c</fullName>
        <description>#STDFLD</description>
        <label>Earthquake Zone</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <description>#STDFLD Building Elevation (in feet)</description>
        <inlineHelpText>Building Elevation (in feet)</inlineHelpText>
        <label>Elevation</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Contacts_Email_List__c</fullName>
        <description>List of emails for external contacts that needs to be alerted if an event from RK Alerts occurs that affects this property.</description>
        <inlineHelpText>List of emails for external contacts that needs to be alerted if an event from RK Alerts occurs that affects this property.</inlineHelpText>
        <label>External Contacts Email List</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fire_Areas__c</fullName>
        <description>#STDFLD</description>
        <label>Fire Areas</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fire_Dept_Location__c</fullName>
        <description>#STDFLD</description>
        <inlineHelpText>Closest Fire Department Location</inlineHelpText>
        <label>Fire Dept Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fire_Dept_Type__c</fullName>
        <description>#STDFLD</description>
        <label>Fire Dept Type</label>
        <picklist>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fire_Hydrant_Distance__c</fullName>
        <description>#STDFLD</description>
        <inlineHelpText>Closest Fire Hydrant Distance in feet.</inlineHelpText>
        <label>Fire Hydrant Distance</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <description>#STDFLD</description>
        <label>Flood Zone</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Floors_Occupied__c</fullName>
        <description>#STDFLD</description>
        <label>Floors Occupied</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Square_Footage__c</fullName>
        <description>#STDFLD</description>
        <label>Gross Square Footage</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchy</label>
        <referenceTo>rkl__RK_Hierarchy_Node__c</referenceTo>
        <relationshipLabel>Vendor Locations</relationshipLabel>
        <relationshipName>Vendor_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interior_Columns__c</fullName>
        <description>#STDFLD</description>
        <inlineHelpText>Distance between interior columns measured center-to-center in feet</inlineHelpText>
        <label>Interior Columns</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Contacts_Email_List__c</fullName>
        <description>List of emails for internal contacts that needs to be alerted if an event from RK Alerts occurs that affects this property.</description>
        <inlineHelpText>List of emails for internal contacts that needs to be alerted if an event from RK Alerts occurs that affects this property.</inlineHelpText>
        <label>Internal Contacts Email List</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LEED_Certification_Level__c</fullName>
        <description>#STDFLD</description>
        <label>LEED Certification Level</label>
        <picklist>
            <controllingField>LEED_Certified__c</controllingField>
            <picklistValues>
                <fullName>certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LEED_Certified__c</fullName>
        <description>#STDFLD</description>
        <label>LEED Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_CSA_Score__c</fullName>
        <description>CSA score returned from most recent CSA</description>
        <label>Latest CSA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Levels_Above_Grade__c</fullName>
        <description>#STDFLD</description>
        <label>Levels Above Grade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Levels_Below_Grade__c</fullName>
        <description>#STDFLD</description>
        <label>Levels Below Grade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_of_Vendor_Location_Effect__c</fullName>
        <description>Describe the expected effect if this vendor location were to be lost for any reason.</description>
        <inlineHelpText>Describe the expected effect if this vendor location were to be lost for any reason. This could include very high level recovery statements such as &quot;vendors B &amp; C could immediately replace the product/service from this location&quot; or &quot;Total cessation&quot;</inlineHelpText>
        <label>Loss of Vendor Location Effect</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NAICS__c</fullName>
        <description>#STDFLD North American Industry Classification System</description>
        <inlineHelpText>North American Industry Classification System</inlineHelpText>
        <label>NAICS</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Fire_Hydrants__c</fullName>
        <description>#STDFLD</description>
        <inlineHelpText>Number of Fire Hydrants within 500 feet.</inlineHelpText>
        <label>Proximity Fire Hydrants</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupancy_Type__c</fullName>
        <description>#STDFLD</description>
        <label>Occupancy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-tenant Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-tenant Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <description>#STDFLD</description>
        <label>Occupation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Leased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease - For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease - Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease - Pending Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease - Unoccupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned - For Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned - Occupied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned - Pending Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owned - Unoccupied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perimeter_Wall_Construction__c</fullName>
        <description>#STDFLD</description>
        <label>Perimeter Wall Construction</label>
        <picklist>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stucco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood &amp; Stucco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brick &amp; Steel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Masonry Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Siding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Zoning__c</fullName>
        <description>#STDFLD</description>
        <label>Property Zoning</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Protection_Class__c</fullName>
        <description>#STDFLD Fire Protection Class (US)</description>
        <inlineHelpText>Fire Protection Class (US)</inlineHelpText>
        <label>Protection Class</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renovation_Years__c</fullName>
        <description>#STDFLD</description>
        <label>Renovation Years</label>
        <picklist>
            <picklistValues>
                <fullName>1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Roof_Flashing__c</fullName>
        <description>#STDFLD Flashing Material</description>
        <label>Roof Flashing</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <description>#STDFLD</description>
        <label>Roof Type</label>
        <picklist>
            <picklistValues>
                <fullName>Plywood on Wood Frame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal on Steel Beam</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <description>#STDFLD Standard Industrial Classification Code</description>
        <inlineHelpText>Standard Industrial Classification Code</inlineHelpText>
        <label>SIC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <description>#STDFLD</description>
        <label>Security</label>
        <picklist>
            <picklistValues>
                <fullName>Security Guards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Surveillance</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sprinklers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#STDFLD</description>
        <label>Sprinklers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <description>#STDFLD</description>
        <label>Square Footage</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.  Contact Record Type must be &quot;Vendor&quot;.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vendor Locations</relationshipLabel>
        <relationshipName>Vendor_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.

Account Record Type must be Vendor.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Locations</relationshipLabel>
        <relationshipName>Vendor_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Water_Supply_Test_Date__c</fullName>
        <description>#STDFLD</description>
        <inlineHelpText>Date Water Supply was last tested.</inlineHelpText>
        <label>Water Supply Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Water_Supply_Type__c</fullName>
        <description>#STDFLD</description>
        <label>Water Supply Type</label>
        <picklist>
            <picklistValues>
                <fullName>City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lake/Pond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Well</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wind_Storm_Zone__c</fullName>
        <description>#STDFLD</description>
        <label>Wind Storm Zone</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Vendor Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>External_Contacts_Email_List__c</columns>
        <columns>Internal_Contacts_Email_List__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vendor Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>